--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.14",
+    "multer": "^1.4.2",
     "nanoid": "^3.1.16"
   }
 }
