--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
-    "nanoid": "^3.1.16"
+    "nanoid": "^3.1.16",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
